--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 <body>
     <div class="container">
         <!-- Substitua 'logo.png' pelo caminho do seu logo -->
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="Right.png" alt="Logo" class="logo">
         
         <!-- Substitua '#' pelo URL desejado -->
         <a href="#" class="link">Visite Nosso Site</a>
