--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
         <img src="Right.png" alt="Logo" class="logo">
         
         <!-- Substitua '#' pelo URL desejado -->
-        <a href="#" class="link">Visite Nosso Site</a>
+        <a href="https://raydium.io/swap/?inputMint=sol&outputMint=mnteY5NZJhMs5FaGKJLwnm1ciJ9JhJ3Zn5CsQ45mhKs" class="link">Compre</a>
     </div>
 </body>
 </html>
