--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Right Token</title>
+    <title>Página Inicial Minimalista</title>
     <style>
         body {
             display: flex;
@@ -22,22 +22,27 @@
             margin-bottom: 20px;
         }
         .link {
+            display: inline-block;
             text-decoration: none;
             color: #3498db;
             font-size: 18px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: color 0.3s, background-color 0.3s;
         }
         .link:hover {
-            color: #2c3e50;
+            color: #ffffff;
+            background-color: #3498db;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- Substitua 'logo.png' pelo caminho do seu logo -->
-        <img src="Right.png" alt="Logo" class="logo">
+        <!-- Substitua 'logo.png' pelo caminho da sua logo -->
+        <img src="logo.png" alt="Logoa" class="logo">
         
         <!-- Substitua '#' pelo URL desejado -->
-        <a href="https://raydium.io/swap/?inputMint=sol&outputMint=mnteY5NZJhMs5FaGKJLwnm1ciJ9JhJ3Zn5CsQ45mhKs" class="link">Compre</a>
+        <a href="#" class="link">Trade / Adquirir</a>
     </div>
 </body>
 </html>
