--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@
     <div class="container">
         <!-- Substitua '#' com o URL desejado e 'logo.png' com o caminho para a sua logo -->
         <a href="https://raydium.io/swap/?inputMint=mnteY5NZJhMs5FaGKJLwnm1ciJ9JhJ3Zn5CsQ45mhKs&outputMint=sol" target="_blank">
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="Right.png" alt="Logo" class="logo">
         </a>
     </div>
 </body>
